terrestrial data processing

--- a/data/notebooks/pipes_mock/intermediate.ipynb
+++ b/data/notebooks/pipes_mock/intermediate.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -796,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -822,17 +822,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'id': 'marine-shp', 'title': 'WDPA_WDOECM_Sep2024_Public_marine_shp', 'url': 'https://d1gam3xoknrgr2.cloudfront.net/current/WDPA_WDOECM_Sep2024_Public_marine_shp.zip', 'hasFailed': False, 'token': 'marine'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "working_folder = FileConventionHandler(pipe)\n",
     "input_path = working_folder.pipe_raw_path\n",
@@ -843,25 +835,25 @@
     "zipped_output_file = working_folder.get_step_fmt_file_path(step, \"zip\", True)\n",
     "remote_path = working_folder.get_remote_path(step)\n",
     "\n",
-    "# download data\n",
-    "r = requests.post(url=mpa_url, data=mpa_body)\n",
-    "r.raise_for_status()\n",
+    "# # download data\n",
+    "# r = requests.post(url=mpa_url, data=mpa_body)\n",
+    "# r.raise_for_status()\n",
     "\n",
-    "download_url = r.json().get(\"url\")\n",
-    "input_file_name = f'{r.json().get(\"title\")}.zip'\n",
-    "print(r.json())\n",
+    "# download_url = r.json().get(\"url\")\n",
+    "# input_file_name = f'{r.json().get(\"title\")}.zip'\n",
+    "# print(r.json())\n",
     "\n",
-    "input_file =  downloadFile(\n",
-    "    url=download_url,\n",
-    "    output_path=input_path,\n",
-    "    overwrite=force_clean,\n",
-    "    file=input_file_name,\n",
-    ")"
+    "# input_file =  downloadFile(\n",
+    "#     url=download_url,\n",
+    "#     output_path=input_path,\n",
+    "#     overwrite=force_clean,\n",
+    "#     file=input_file_name,\n",
+    "# )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -878,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -926,7 +918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -938,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -955,27 +947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'vizzuality_processed_data/mpa/preprocess/mpa_preprocess.zip'"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "remote_path"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -993,7 +965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1004,7 +976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1019,12 +991,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "working_folder = FileConventionHandler(pipe)\n",
-    "input_path = working_folder.pipe_raw_path\n",
+    "# input_path = working_folder.pipe_raw_path\n",
+    "input_file = working_folder.pipe_raw_path.joinpath(\"WDPA_Sep2024_Public_shp.zip\")\n",
     "temp_working_path = working_folder.get_temp_file_path(step)\n",
     "\n",
     "output_path = working_folder.get_processed_step_path(step)\n",
@@ -1035,9 +1008,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'id': 'wdpa-shp', 'title': 'WDPA_Oct2024_Public_shp', 'url': 'https://d1gam3xoknrgr2.cloudfront.net/current/WDPA_Oct2024_Public_shp.zip', 'hasFailed': False, 'token': 'wdpa'}\n"
+     ]
+    }
+   ],
    "source": [
     "# download data\n",
     "r = requests.post(url=mpa_url, data=mpa_body)\n",
@@ -1057,7 +1038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1074,7 +1055,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1123,355 +1104,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|                                                                                                                                                    | 85/292261 [00:00<14:27, 336.92it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'shapely.geometry.base.GeometrySequence'>\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  0%|▎                                                                                                                                               | 661/292261 [00:07<145:23:41,  1.79s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'shapely.geometry.base.GeometrySequence'>\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  1%|██                                                                                                                                               | 4100/292261 [00:10<00:50, 5746.09it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "'Polygon' object has no attribute 'geoms'\n",
-      "<class 'shapely.geometry.base.GeometrySequence'>\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  5%|██████▋                                                                                                                                         | 13673/292261 [00:12<02:06, 2195.25it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'shapely.geometry.base.GeometrySequence'>\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 21%|█████████████████████████████▋                                                                                                                  | 60200/292261 [00:20<01:26, 2696.80it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'shapely.geometry.base.GeometrySequence'>\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 22%|████████████████████████████████▏                                                                                                               | 65454/292261 [00:22<02:10, 1744.30it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'shapely.geometry.base.GeometrySequence'>\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 32%|██████████████████████████████████████████████▋                                                                                                 | 94837/292261 [00:27<00:41, 4733.72it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'shapely.geometry.base.GeometrySequence'>\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 34%|█████████████████████████████████████████████████                                                                                              | 100205/292261 [00:28<00:47, 4031.78it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'shapely.geometry.base.GeometrySequence'>\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 36%|███████████████████████████████████████████████████▎                                                                                           | 104962/292261 [00:29<00:43, 4304.70it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'shapely.geometry.base.GeometrySequence'>\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 41%|██████████████████████████████████████████████████████████▎                                                                                    | 119249/292261 [00:32<00:35, 4855.21it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'shapely.geometry.base.GeometrySequence'>\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 46%|█████████████████████████████████████████████████████████████████▋                                                                             | 134186/292261 [00:35<00:52, 3035.13it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "'Polygon' object has no attribute 'geoms'\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 51%|████████████████████████████████████████████████████████████████████████▎                                                                      | 147855/292261 [00:38<00:42, 3390.00it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'shapely.geometry.base.GeometrySequence'>\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 53%|███████████████████████████████████████████████████████████████████████████▋                                                                   | 154770/292261 [00:40<00:37, 3677.63it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'shapely.geometry.base.GeometrySequence'>\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 54%|████████████████████████████████████████████████████████████████████████████▌                                                                  | 156511/292261 [00:40<01:10, 1915.83it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "'Polygon' object has no attribute 'geoms'\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 56%|███████████████████████████████████████████████████████████████████████████████▍                                                               | 162422/292261 [00:42<00:31, 4181.06it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "'Polygon' object has no attribute 'geoms'\n",
-      "<class 'shapely.geometry.base.GeometrySequence'>\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 58%|██████████████████████████████████████████████████████████████████████████████████▌                                                            | 168614/292261 [00:43<00:55, 2234.02it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'shapely.geometry.base.GeometrySequence'>\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 68%|█████████████████████████████████████████████████████████████████████████████████████████████████▋                                             | 199564/292261 [00:49<00:19, 4753.37it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'shapely.geometry.base.GeometrySequence'>\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 70%|████████████████████████████████████████████████████████████████████████████████████████████████████▎                                          | 205065/292261 [00:50<00:27, 3198.44it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'shapely.geometry.base.GeometrySequence'>\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 75%|███████████████████████████████████████████████████████████████████████████████████████████████████████████▋                                   | 219986/292261 [00:53<00:17, 4065.50it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'shapely.geometry.base.GeometrySequence'>\n",
-      "<class 'shapely.geometry.base.GeometrySequence'>\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 84%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████▋                      | 246638/292261 [00:58<00:10, 4368.04it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "'Polygon' object has no attribute 'geoms'\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 93%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████▉          | 271598/292261 [01:03<00:06, 3242.58it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'shapely.geometry.base.GeometrySequence'>\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 94%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████▊        | 275485/292261 [01:03<00:04, 3707.50it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'shapely.geometry.base.GeometrySequence'>\n",
-      "<class 'shapely.geometry.base.GeometrySequence'>\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 95%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████▏      | 278285/292261 [01:04<00:02, 6507.33it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'shapely.geometry.base.GeometrySequence'>\n",
-      "<class 'shapely.geometry.base.GeometrySequence'>\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 99%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████▉ | 290011/292261 [01:11<00:00, 5892.57it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'shapely.geometry.base.GeometrySequence'>\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 292261/292261 [03:13<00:00, 1507.66it/s]\n"
+      "100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 292261/292261 [03:34<00:00, 1362.25it/s]\n"
      ]
     }
    ],
@@ -1481,7 +1121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1492,46 +1132,6 @@
     "    layer=\"name\",\n",
     "    encoding=\"utf-8\",\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "PosixPath('/home/sofia/dev/skytruth-30x30/data/data/mpa-terrestrial/processed/preprocess/mpa-terrestrial_preprocess.gpkg')"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "output_file"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['0', '1'], dtype=object)"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "final_wdpa_terrestrial['MARINE'].unique()"
    ]
   },
   {
@@ -1553,13 +1153,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# clean unzipped files\n",
-    "rm_tree(temp_working_path) if temp_working_path.exists() else None\n",
-    "rm_tree(output_path) if output_path.exists() else None"
+    "# # clean unzipped files\n",
+    "# rm_tree(temp_working_path) if temp_working_path.exists() else None\n",
+    "# rm_tree(output_path) if output_path.exists() else None"
    ]
   },
   {
@@ -2333,18 +1933,6 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.12.5"
   }
  },
  "nbformat": 4,
