add precalculations notebook, update processors and remove old notebooks

--- a/data/notebooks/pipes_mock/intermediate.ipynb
+++ b/data/notebooks/pipes_mock/intermediate.ipynb
@@ -1,12 +1,19 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# TODO: should we save every output as a [geoparquet](https://geoparquet.org/) in the future to improve read performance (reduction 30% read time)?"
+    "## Data download and preprocessing\n",
+    "\n",
+    "This notebook handles data downloading and preprocessing, preparing it for use in tiles.ipynb, locations.ipynb, and/or precalculations.ipynb."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Set up"
    ]
   },
   {
