--- a/data/notebooks/pipes_mock/locations.ipynb
+++ b/data/notebooks/pipes_mock/locations.ipynb
@@ -1,6 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Locations table for marine and terrestrial territories\n",
+    "\n",
+    "This notebook gathers and organizes all necessary data to generate a the locations table, encompassing both marine and terrestrial territories. To be run after intermediate.ipynb and before precalculations.ipynb."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Set up"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 42,
    "metadata": {},
@@ -82,6 +98,13 @@
     "mysettings = get_settings()\n",
     "prev_step = \"preprocess\"\n",
     "current_step = \"stats\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create locations from EEZ and GADM"
    ]
   },
   {
